# voiceover-tool

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  cache.rs  dsp.rs  export.rs  lib.rs  main.rs  settings.rs  shortcuts.rs  timeline.rs
src/api/: nativeDrag.ts  tauriApi.ts  windowControls.ts
src/config/: appConfig.ts
src/state/: useVoiceoverStore.ts
src/types/: domain.ts
src/ui/: App.tsx  SettingsPanel.tsx  ShortcutHint.tsx  ShortcutSettingsModal.tsx  Timeline.tsx  useShortcuts.ts
